Add style and state

--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,50 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.traffic-light {
+  width: 150px;
+  height: 400px;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.circle {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
 }
 
-.card {
-  padding: 2em;
+.circle:hover {
+  cursor: pointer;
 }
 
-.read-the-docs {
-  color: #888;
+.circle-red {
+  background-color: red;
+}
+
+.circle-orange {
+  background-color: orange;
+}
+
+.circle-green {
+  background-color: green;
+}
+
+.turn-on {
+  box-shadow: 0 0 100px yellow; /* Sombra alrededor del círculo */
 }
